# key-note-overlay-cpp

./: .gitignore  CMakeLists.txt  README.md  build_cpp_overlay.bat  key_note_cpp_config.example.ini  key_note_cpp_config.example.json  key_note_cpp_config.ini  key_note_cpp_selftest.ini  run_cpp_overlay.bat
src/: key_note_overlay_cpp.cpp
